@@ -20,6 +20,7 @@ Version 1.1.0 (git)
   * The --to-folder option can now be used in conjunction with --all or
     --all-subscribed to copy messages from multiple source folders to a single
     destination folder.
+  * More concise log messages to reduce visual clutter in the log.
   * Fixed encoding issues when creating mailboxes and getting mailbox lists.
   * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
   * Fixed a bug in which Larch would try to copy flags that weren't supported on
